feat: using memo

--- a/09__props.html
+++ b/09__props.html
@@ -7,27 +7,35 @@
 <script crossorigin src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <script type="text/babel">
-    function Btn({text, big}) {
-        console.log({text, big});
+    function Btn({text, changeValue}) {
+        // console.log(text, "was rendered");
+        // props가 변경되지 않는다면 다시 그릴 필요가 없다.
         return (
-            <button style={{
-                backgroundColor: "tomato",
-                color: "white",
-                padding: "10px 20px",
-                border: 0,
-                borderRadius: 10,
-                fontSize: big ? 18 : 14,
-            }}>
+            <button 
+                onClick={changeValue} 
+                style={{
+                    backgroundColor: "tomato",
+                    color: "white",
+                    padding: "10px 20px",
+                    border: 0,
+                    borderRadius: 10,
+                    fontSize: 16,
+                }}
+            >
                 { text }
             </button>
         );
     }
 
+    const MemorizedBtn = React.memo(Btn);
+
     function App() {
+        const [value, setValue] = React.useState("Save Changes");
+        const changeValue = () => setValue("Revert Changes");
         return (
             <div>
-                <Btn text="Save Changes" big={true} />
-                <Btn text="Continue" />  
+                <MemorizedBtn text={value} changeValue={changeValue}/>
+                <MemorizedBtn text="Continue" />  
             </div>
         );
     };
