fix: correcting typos

--- a/10__prop-type.html
+++ b/10__prop-type.html
@@ -27,7 +27,7 @@
     }
 
     Btn.propTypes = {
-        tex: PropTypes.string.isRequired,
+        text: PropTypes.string.isRequired,
         fontSize: PropTypes.number
     }
 
